--- a/src/styles.css
+++ b/src/styles.css
@@ -24,25 +24,28 @@ table {
     table-layout: fixed
 }
 
-th, td {
-    border: 1px solid rgb(222, 222, 222);
-    text-align: left;
+tbody {
+    td {
+        border: 1px solid rgb(222, 222, 222);
+        text-align: left;
+    }
+
+    tr:nth-child(odd) {
+        background-color: rgb(240, 240, 240);
+    }
+
+    tr:hover {
+        background-color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
+    }
 }
 
-tr:nth-child(odd) {
-    background-color: rgb(240, 240, 240);
-}
-
-tr:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-}
-
-th {
+thead {
     background-color: rgb(222, 222, 222);
     font-weight: bold;
     color: rgb(0, 0, 0);
 }
+
 /*-----------------------------------------------*/
 
 article {
