--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,15 @@ table {
     width: 95%;
     margin-top: 50px;
     border-collapse: collapse;
-    table-layout: fixed
+    table-layout: fixed;
+    padding-left: 5px;
 }
 
 tbody {
     td {
         border: 1px solid rgb(222, 222, 222);
         text-align: left;
+        padding-left: 5px;
     }
 
     tr:nth-child(odd) {
@@ -44,6 +46,12 @@ thead {
     background-color: rgb(222, 222, 222);
     font-weight: bold;
     color: rgb(0, 0, 0);
+    padding-left: 5px;
+    td {
+            border: 1px solid rgb(222, 222, 222);
+            text-align: left;
+            padding-left: 5px;
+        }
 }
 
 /*-----------------------------------------------*/
