--- a/src/styles.css
+++ b/src/styles.css
@@ -16,13 +16,9 @@ ul {
 
 table {
     font-family: Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    width: 95%;
-    margin-top: 50px;
+    width: calc(100% - 100px);
+    margin: 50px auto;
     border-collapse: collapse;
-    table-layout: fixed;
-    padding-left: 5px;
 }
 
 tbody {
@@ -48,10 +44,10 @@ thead {
     color: rgb(0, 0, 0);
     padding-left: 5px;
     td {
-            border: 1px solid rgb(222, 222, 222);
-            text-align: left;
-            padding-left: 5px;
-        }
+        border: 1px solid rgb(222, 222, 222);
+        text-align: left;
+        padding-left: 5px;
+    }
 }
 
 /*-----------------------------------------------*/
